@@ -27,6 +27,7 @@ AC_CHECK_LIB([m], [sin])
 
 
 AC_C_BIGENDIAN
+AC_C_INLINE
 
 AC_CHECK_FUNCS(gethostbyname, [], [
   AC_CHECK_LIB(nsl, gethostbyname)
@@ -45,7 +46,6 @@ AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h locale.h malloc.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/file.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-# AC_HEADER_STDBOOL
 AC_C_CONST
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
@@ -57,9 +57,7 @@ AC_TYPE_UID_T
 AC_FUNC_FORK
 AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
-#AC_FUNC_REALLOC
 AC_FUNC_SELECT_ARGTYPES
-#AC_FUNC_SETPGRP
 AC_TYPE_SIGNAL
 AC_FUNC_STAT
 AC_CHECK_FUNCS([abort sigaction setitimer valloc clock_gettime dup2 gethostname getpagesize gettimeofday pow realpath select socket strcasecmp strchr strerror strncasecmp strrchr setpgid])
